--- a/index.html
+++ b/index.html
@@ -1,15 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Carrito</title>
 </head>
-<body>
-    <h1><span>Carrito de compras</span></h1>
-    <hr />
-    <!-- <h2></h2> -->
 
-    <script src="./js/main.js"></script>
+<body>
+    <header class="headerIndex">
+        <div class="container-fluid">
+            <div class="row divHeader">
+                <img src="./img/Logo Templates.jpg" alt="" class="offset-lg-1 logo">
+                <div class=" offset-lg-7 col-lg-1">
+                    <ul class="listaCarrito">
+                        <li class="submenu">
+                            <img src="./img/carrito.png"
+                                width="30" id="img-carrito">
+                            <div id="carrito">
+                                <table id="lista-carrito" class="u-full-width">
+                                    <thead>
+                                        <tr>
+                                            <th>Imagen</th>
+                                            <th>Nombre</th>
+                                            <th>Precio</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                                <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <div id="hero">
+    </div>
+
+    <div id="lista-cursos" class="container">
+        <h1 id="encabezado" class="encabezado">Talabartería 'Jinete'</h1>
+        <h2 class="text-center">Productos</h2>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card">
+                    <img src="./img/CabezadaCaballo.jpeg" class="imagen-curso u-full-width">
+                    <div class="info-card">
+                        <h4>Cabezada</h4>
+                        <p>Cuero</p>
+                        <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
+                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar
+                            Al Carrito</a>
+                    </div>
+                </div> <!--.card-->
+            </div>
+            <div class="col-lg-4">
+                <div class="card">
+                    <img src="./img/CabezadaCaballoCueroCrudo.webp" class="imagen-curso u-full-width">
+                    <div class="info-card">
+                        <h4>Cabezada</h4>
+                        <p>Cuero crudo</p>
+                        <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
+                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar
+                            Al Carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card">
+                    <img src="./img/CabezadaCaballoPlata.jpeg" class="imagen-curso u-full-width">
+                    <div class="info-card">
+                        <h4>Cabezada</h4>
+                        <p>Plata</p>
+                        <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
+                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar
+                            Al Carrito</a>
+                    </div>
+                </div> <!--.card-->
+            </div>
+
+        </div> <!--.row-->
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card">
+                    <img src="./img/MonturaCaballo1.jpeg" class="imagen-curso u-full-width">
+                    <div class="info-card">
+                        <h4>Montura</h4>
+                        <p>Cuero</p>
+                        <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
+                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar
+                            Al Carrito</a>
+                    </div>
+                </div> <!--.card-->
+            </div>
+            <div class="col-lg-4">
+                <div class="card">
+                    <img src="./img/RecadoCaballo.webp" class="imagen-curso u-full-width">
+                    <div class="info-card">
+                        <h4>Recado</h4>
+                        <p>Dato</p>
+                        <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
+                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="5">Agregar
+                            Al Carrito</a>
+                    </div>
+                </div> <!--.card-->
+            </div>
+            <div class="col-lg-4">
+                <div class="card">
+                    <img src="./img/MonturaChilena.jpeg" class="imagen-curso u-full-width">
+                    <div class="info-card">
+                        <h4>Montura chilena</h4>
+                        <p>Montura chilena</p>
+                        <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
+                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar
+                            Al Carrito</a>
+                    </div>
+                </div> <!--.card-->
+            </div>
+        </div> <!--.row-->
+
+        <footer id="footer" class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <nav id="principal" class="menu">
+                            <a class="enlace" href="#">Contacto</a>
+                            <a class="enlace" href="#">Para tu Negocio</a>
+                        </nav>
+                    </div>
+                    <div class="col-lg-4">
+                        <nav id="secundaria" class="menu">
+                            <a class="enlace" href="#">¿Quienes Somos?</a>
+                            <a class="enlace" href="#">Soporte</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
+        <script src="./js/main.js"></script>
 </body>
+
 </html>
