--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="hero">
     </div>
 
-    <div id="lista-cursos" class="container">
+    <div id="lista-cursos" class="container containerMio">
         <h1 id="encabezado" class="encabezado">Talabartería 'Jinete'</h1>
         <h2 class="text-center">Productos</h2>
         <div class="row">
@@ -133,7 +133,7 @@
         </div> <!--.row-->
 
         <footer id="footer" class="footer">
-            <div class="container">
+            <div class="container containerMio">
                 <div class="row">
                     <div class="col-lg-4">
                         <nav id="principal" class="menu">
