Detalles de los precios

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="hero">
     </div>
 
-    <div id="lista-cursos" class="container containerMio">
+    <div id="lista-productos" class="container containerMio">
         <h1 id="encabezado" class="encabezado">Talabartería 'Jinete'</h1>
         <h2 class="text-center">Productos</h2>
         <div class="row">
@@ -56,7 +56,8 @@
                         <h4>Cabezada</h4>
                         <p>Cuero</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$ 80000</p>
+                        <!-- <span class="u-pull-right ">$15</span> -->
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar
                             Al Carrito</a>
                     </div>
@@ -69,7 +70,7 @@
                         <h4>Cabezada</h4>
                         <p>Cuero crudo</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$ 50000 </p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar
                             Al Carrito</a>
                     </div>
@@ -82,7 +83,7 @@
                         <h4>Cabezada</h4>
                         <p>Plata</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$ 120000</p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar
                             Al Carrito</a>
                     </div>
@@ -98,7 +99,7 @@
                         <h4>Montura</h4>
                         <p>Cuero</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$ 60000</p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar
                             Al Carrito</a>
                     </div>
@@ -111,7 +112,7 @@
                         <h4>Recado</h4>
                         <p>Dato</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$ 200000 </p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="5">Agregar
                             Al Carrito</a>
                     </div>
@@ -124,7 +125,7 @@
                         <h4>Montura chilena</h4>
                         <p>Montura chilena</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$200 <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$ 90000 </p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar
                             Al Carrito</a>
                     </div>
