trabajo LS y DOM

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                                     </thead>
                                     <tbody></tbody>
                                 </table>
+                                <h5 id="total-carrito">Total: </h5>
                                 <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
                             </div>
                         </li>
@@ -51,7 +52,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="card">
-                    <img src="./img/CabezadaCaballo.jpeg" class="imagen-curso u-full-width">
+                    <img href="#" src="./img/CabezadaCaballo.jpeg" class=" u-full-width img-carrito">
                     <div class="info-card">
                         <h4>Cabezada</h4>
                         <p>Cuero</p>
@@ -65,7 +66,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="card">
-                    <img src="./img/CabezadaCaballoCueroCrudo.webp" class="imagen-curso u-full-width">
+                    <img src="./img/CabezadaCaballoCueroCrudo.webp" class=" u-full-width">
                     <div class="info-card">
                         <h4>Cabezada</h4>
                         <p>Cuero crudo</p>
@@ -78,7 +79,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="card">
-                    <img src="./img/CabezadaCaballoPlata.jpeg" class="imagen-curso u-full-width">
+                    <img src="./img/CabezadaCaballoPlata.jpeg" class="u-full-width">
                     <div class="info-card">
                         <h4>Cabezada</h4>
                         <p>Plata</p>
@@ -94,7 +95,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="card">
-                    <img src="./img/MonturaCaballo1.jpeg" class="imagen-curso u-full-width">
+                    <img src="./img/MonturaCaballo1.jpeg" class="u-full-width">
                     <div class="info-card">
                         <h4>Montura</h4>
                         <p>Cuero</p>
@@ -107,7 +108,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="card">
-                    <img src="./img/RecadoCaballo.webp" class="imagen-curso u-full-width">
+                    <img src="./img/RecadoCaballo.webp" class="u-full-width">
                     <div class="info-card">
                         <h4>Recado</h4>
                         <p>Dato</p>
@@ -120,7 +121,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="card">
-                    <img src="./img/MonturaChilena.jpeg" class="imagen-curso u-full-width">
+                    <img src="./img/MonturaChilena.jpeg" class="u-full-width">
                     <div class="info-card">
                         <h4>Montura chilena</h4>
                         <p>Montura chilena</p>
