funciona suma total carrito

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                     </thead>
                                     <tbody></tbody>
                                 </table>
-                                <h5 id="total-carrito">Total: </h5>
+                                <h5>Total: </h5> <h5 id="total-carrito">0.00</h5>
                                 <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
                             </div>
                         </li>
@@ -57,7 +57,7 @@
                         <h4>Cabezada</h4>
                         <p>Cuero</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$ 80000</p>
+                        $<p class="precio">80000</p>
                         <!-- <span class="u-pull-right ">$15</span> -->
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar
                             Al Carrito</a>
@@ -71,7 +71,7 @@
                         <h4>Cabezada</h4>
                         <p>Cuero crudo</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$ 50000 </p>
+                        $<p class="precio">50000 </p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar
                             Al Carrito</a>
                     </div>
