--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <h4>Cabezada</h4>
                         <p>Plata</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$ 120000</p>
+                        $<p class="precio">120000</p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar
                             Al Carrito</a>
                     </div>
@@ -100,7 +100,7 @@
                         <h4>Montura</h4>
                         <p>Cuero</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$ 60000</p>
+                        $<p class="precio">60000</p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar
                             Al Carrito</a>
                     </div>
@@ -113,7 +113,7 @@
                         <h4>Recado</h4>
                         <p>Dato</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$ 200000 </p>
+                        $<p class="precio">200000 </p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="5">Agregar
                             Al Carrito</a>
                     </div>
@@ -126,7 +126,7 @@
                         <h4>Montura chilena</h4>
                         <p>Montura chilena</p>
                         <img src="http://programacion.net/files/article/20160811120805_estrellas.png" width="50">
-                        <p class="precio">$ 90000 </p>
+                        $<p class="precio">90000 </p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar
                             Al Carrito</a>
                     </div>
