--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                 </table>
                                 <h5>Total: </h5> <h5 id="total-carrito">0.00</h5>
                                 <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                                <a href="#" id="finalizar-compra" class="button u-full-width">Comprar</a>
                             </div>
                         </li>
                     </ul>
@@ -153,6 +154,8 @@
             </div>
         </footer>
 
+        
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
